# Core-CMS

./: .dockerignore  .editorconfig  .env  .env.sample  .gitignore  .gitmessage  .gitmodules  .markdownlintrc  .pnp.js  .pr_agent.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  Makefile  PUBLISHING.md  README.md  TESTING.md  TODO.md  debug-settings.sh  docker-compose.dev.yml  docker-compose.example-cms.yml  docker-compose.example.yml  docker-compose.yml  elasticsearch.yml  environment.yml  fractal.config.js  manage.py  package-lock.json  package.json  postcss.config.js  postcss.js  pyproject.toml  repo_name_example.var  requirements.txt  test-circular-import.sh  test-pr-1075.md  test-pr-1075.sh
.github/: PULL_REQUEST_TEMPLATE.md  labels_basic.yml  pull_request_template.md  pull_request_template.proposed.md
.yarn/: build-state.yml
dev_notes/: cms-dev-setup.txt  cms-site-template_package.json  cms-site-template_pip.txt  cms-site-template_spec.txt  cms-template01-setup_list.txt  cms.todos.txt  conda_env_base_list.txt  conda_env_cms-template_list.txt  db_cms_iniital_migrations_setup.sh  requirements_usage.txt  texascale.org.todos.txt
djangocms_tacc_header_logo/: apps.py  cms_plugins.py  forms.py  render.py
docs/: 404.md  PostgreSQL_database_manual_update_procedures.md  _config.yml  command-sequences.md  contributing.md  debug-project.md  develop-custom-app.md  develop-custom-project.md  develop-project.md  gh-999-editable-header-plan.md  index.html  index.md  manage-dependencies.md  project-customization.md  styles-and-scripts.md  (+1 more)
(+955 files in other folders)
