[tool.poetry]
name = "core-cms"
version = "0.1.0"
description = "TACC ACI-WMA Core-CMS Codebase"
authors = ["John Gentle <taoteg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
