[tool.poetry]
name = "core-cms"
version = "1.0.0"
description = "DjangoCMS backend for the TACC ACI-WMA Core-CMS Codebase."
authors = ["TACC-WMA <wma-portals@tacc.utexas.edu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
